# PILOTS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: doc-pages.yml  docs-pages.yml
bench/: README.md  run_benchmark.py
docs/: build_docs.sh
docs/manual/: README.txt
docs/sphinx/: Makefile
docs/sphinx/source/: algorithms.rst  architecture.rst  checkpoint-follow.rst  cli.rst  conf.py  config.rst  developer.rst  getting-started.rst  groups.rst  index.rst  mapping.rst  python.rst  results-json.rst  sdk.rst  topology.rst
include/pilots/alg/geom/: GeometryView.hpp
include/pilots/alg/graph/: Components.hpp  Descriptors.hpp  EdgeList.hpp  GraphView.hpp  ShortestPaths.hpp  Spanning.hpp
include/pilots/alg/index/: ChainIndex.hpp
include/pilots/alg/mapping/: Backmapping.hpp  BeadFrame.hpp  BeadGraphBuilder.hpp  BeadMapping.hpp  MappingSpec.hpp
include/pilots/alg/neighbor/: ContactGraphBuilder.hpp
include/pilots/alg/polymer/: PolymerClassifier.hpp
include/pilots/alg/stats/: BlockAverager.hpp  Histogram.hpp  LogBinner.hpp  RunningMeanVar.hpp
include/pilots/app/: Runner.hpp
include/pilots/config/: IniConfig.hpp
include/pilots/core/: Box.hpp  FieldSchema.hpp  Frame.hpp  MoleculeIndex.hpp  SystemContext.hpp
include/pilots/correlate/: CorrelationSeries.hpp  CorrelatorFactory.hpp  CorrelatorSpec.hpp  ExactCorrelatorT6.hpp  FFTCorrelatorStubT6.hpp  ICorrelatorT6.hpp  LagAxis.hpp  MultiTauCorrelatorT6.hpp  T6AvgOp.hpp  Tensor6Types.hpp
include/pilots/io/: LammpsDumpReader.hpp  TopologyReaders.hpp
include/pilots/measures/: IMeasure.hpp  MSD.hpp  MSDMeasure.hpp  MeasureRegistry.hpp
include/pilots/output/: ResultsIndex.hpp
include/pilots/sdk/: DatasetBuilder.hpp  ExtraFieldHandle.hpp  GraphHandle.hpp  MappingHandle.hpp  Parallel.hpp  SDK.hpp  SelectionHandle.hpp  StateIO.hpp  TextWriter.hpp  TopologyHandle.hpp  Vec3Handle.hpp
include/pilots/select/: CombineExpr.hpp  GroupRegistry.hpp  Selection.hpp  SelectionProvider.hpp  SelectionView.hpp  TopoGroupRegistry.hpp
include/pilots/topology/: BondGraph.hpp  Topology.hpp
include/pilots/util/: AtomicFile.hpp  BinaryIO.hpp  Hash.hpp  Parse.hpp  Timer.hpp
python/: README.md  pyproject.toml
python/pilotsio/: __init__.py  config.py  results.py  runner.py
src/: LammpsDumpReader.cpp  Runner.cpp  main.cpp
src/measures/: RegisterMSD.cpp  template_measure.cpp
tests/configs/: msd.ini
tests/configs/_out/: results.json
tests/data/: sample.dump
