[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pilotsio"
version = "0.1.0"
description = "Pure-Python wrapper for the PILOTS trajectory analysis runner"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "PILOTS contributors"}]
keywords = ["molecular-dynamics", "trajectory-analysis", "lammps", "physics", "polymer"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pilotsio*"]
